src/test/deca/context/valid/unary_minus.deca
// Description:
//    Opérateur unaire
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
   int a = 2;
   int b;
   b = -a;
   b = -3;
}
