src/test/deca/context/invalid/class/heritage/inherit_self.deca
// Description:
//    Déclaration de classe héritant de String
//
// Resultats:
//    undefined supeclass
// 
// Historique:
//    cree le 01/01/2016

class C extends C {

}

{

}
